--- a/SimpleWord/app/src/main/res/layout/activity_main.xml
+++ b/SimpleWord/app/src/main/res/layout/activity_main.xml
@@ -3,14 +3,28 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    tools:context=".MainActivity"
+    android:orientation="vertical">
 
-    <TextView
-        android:id="@+id/text1"
+
+
+    <android.support.design.widget.TabLayout
+        android:id="@+id/tab_main_layout"
+        android:layout_width="match_parent"
+        android:layout_height="40dp"
+        android:background="?attr/colorPrimary"
+        android:elevation="6dp"
+        app:tabGravity="fill"
+        app:tabMode="fixed"
+        />
+
+
+    <android.support.v4.view.ViewPager
+        android:id="@+id/vp_main_viewpager"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Hello World!"
-        android:textSize="20sp"/>
+        app:layout_behavior="@string/appbar_scrolling_view_behavior"/>
 
 
 </LinearLayout>
