--- a/SimpleWord/app/src/main/res/layout/activity_main.xml
+++ b/SimpleWord/app/src/main/res/layout/activity_main.xml
@@ -13,7 +13,7 @@
         android:id="@+id/tab_main_layout"
         android:layout_width="match_parent"
         android:layout_height="40dp"
-        android:background="?attr/colorPrimary"
+        android:background="@color/titlegreen"
         android:elevation="6dp"
         app:tabGravity="fill"
         app:tabMode="fixed"
