--- a/SimpleWord/app/src/main/res/values/colors.xml
+++ b/SimpleWord/app/src/main/res/values/colors.xml
@@ -3,4 +3,8 @@
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
+    <color name="black">#000000</color>
+    <color name="green">#48CAE1</color>
+    <color name="titlegreen">#1BBC9B</color>
+    <color name="grey">#9E9E9E</color>
 </resources>
