--- a/SimpleWord/app/src/main/res/layout/tab_main.xml
+++ b/SimpleWord/app/src/main/res/layout/tab_main.xml
@@ -87,6 +87,10 @@
         android:background="@color/grey"
         android:textSize="25sp"
         android:layout_marginTop="100dp"/>
+    <android.support.v7.widget.RecyclerView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="@color/grey"></android.support.v7.widget.RecyclerView>
 
 
 </LinearLayout>
