--- a/SimpleWord/app/src/main/res/layout/tab_main.xml
+++ b/SimpleWord/app/src/main/res/layout/tab_main.xml
@@ -87,10 +87,15 @@
         android:background="@color/grey"
         android:textSize="25sp"
         android:layout_marginTop="100dp"/>
+
+
     <android.support.v7.widget.RecyclerView
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/grey"></android.support.v7.widget.RecyclerView>
+        android:background="@color/grey"
+        android:id="@+id/rv_wordlist"/>
+
+
 
 
 </LinearLayout>
