--- a/SimpleWord/app/src/main/res/layout/word_item.xml
+++ b/SimpleWord/app/src/main/res/layout/word_item.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:padding="1dp">
 
 
@@ -53,35 +53,42 @@
 
         <ImageView
             android:layout_width="25dp"
-            android:layout_height="15dp"
+            android:layout_height="25dp"
             android:id="@+id/iv_item_importance1"
             android:src="@drawable/star_empty"/>
 
 
         <ImageView
             android:layout_width="25dp"
-            android:layout_height="15dp"
+            android:layout_height="25dp"
             android:id="@+id/iv_item_importance2"
             android:src="@drawable/star_empty"/>
 
         <ImageView
             android:layout_width="25dp"
-            android:layout_height="15dp"
+            android:layout_height="25dp"
             android:id="@+id/iv_item_importance3"
             android:src="@drawable/star_empty"/>
 
         <ImageView
             android:layout_width="25dp"
-            android:layout_height="15dp"
+            android:layout_height="25dp"
             android:id="@+id/iv_item_importance4"
             android:src="@drawable/star_empty"/>
 
         <ImageView
             android:layout_width="25dp"
-            android:layout_height="15dp"
+            android:layout_height="25dp"
             android:id="@+id/iv_item_importance5"
             android:src="@drawable/star_empty"/>
 
 
+
     </LinearLayout>
+
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="2dp"
+        android:background="@color/black"/>
+
 </LinearLayout>
