메인 화면 완료 DB 제작 완료(remove 구현필요)

--- a/SimpleWord/app/src/main/res/layout/tab_wordlist.xml
+++ b/SimpleWord/app/src/main/res/layout/tab_wordlist.xml
@@ -1,11 +1,38 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent" android:layout_height="match_parent">
+    android:layout_width="match_parent" android:layout_height="match_parent"
+    android:orientation="vertical">
 
-    <TextView
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textSize="30sp"
-        android:text="단어 목록" />
+        android:orientation="horizontal"
+        android:layout_margin="20dp">
+
+        <TextView
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:text="알파벳 순서별로 정렬"
+            android:layout_weight="3"
+            android:textSize="20sp"
+            android:id="@+id/tv_list_title"
+            android:textColor="@color/black"
+            />
+        <Spinner
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:id="@+id/list_spinner"/>
+
+
+    </LinearLayout>
+
+
+    <android.support.v7.widget.RecyclerView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/rv_list_wordlist"
+        android:background="@color/grey"/>
+
 
 </LinearLayout>
