--- a/SimpleWord/app/src/main/res/layout/tab_main.xml
+++ b/SimpleWord/app/src/main/res/layout/tab_main.xml
@@ -22,12 +22,14 @@
             android:layout_width="200dp"
             android:layout_height="wrap_content"
             android:textSize="20dp"
-            android:layout_marginRight="10dp"/>
+            android:layout_marginRight="10dp"
+            android:id="@+id/edt_main_word"/>
 
         <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="입력"/>
+            android:text="입력"
+            android:id="@+id/btn_inputText"/>
 
     </LinearLayout>
 
