--- a/SimpleWord/app/src/main/res/layout/tab_main.xml
+++ b/SimpleWord/app/src/main/res/layout/tab_main.xml
@@ -80,6 +80,12 @@
 
 
 
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="스크린락 켜기/끄기"
+        android:layout_marginTop="40dp"
+        android:id="@+id/btn_lock_screen"/>
 
 
     <TextView
@@ -88,7 +94,7 @@
         android:text="최근 입력 목록"
         android:background="@color/grey"
         android:textSize="25sp"
-        android:layout_marginTop="100dp"/>
+        android:layout_marginTop="60dp"/>
 
 
     <android.support.v7.widget.RecyclerView
