휴대폰 대기화면 단어점검 구현완료

--- a/SimpleWord/app/src/main/res/values/colors.xml
+++ b/SimpleWord/app/src/main/res/values/colors.xml
@@ -7,4 +7,5 @@
     <color name="green">#48CAE1</color>
     <color name="titlegreen">#1BBC9B</color>
     <color name="grey">#9E9E9E</color>
+    <color name="white">#FFFFFF</color>
 </resources>
