--- a/SimpleWord/app/src/main/res/layout/tab_main.xml
+++ b/SimpleWord/app/src/main/res/layout/tab_main.xml
@@ -86,6 +86,12 @@
         android:text="스크린락 켜기/끄기"
         android:layout_marginTop="40dp"
         android:id="@+id/btn_lock_screen"/>
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="테스트"
+        android:layout_marginTop="50dp"
+        android:id="@+id/btn_test"/>
 
 
     <TextView
