단어테스트 구현완료

--- a/SimpleWord/app/src/main/res/layout/tab_main.xml
+++ b/SimpleWord/app/src/main/res/layout/tab_main.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent" android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:background="@drawable/back2">
 
     <TextView
         android:layout_width="wrap_content"
@@ -98,7 +99,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="최근 입력 목록"
-        android:background="@color/grey"
+        android:background="@color/pink"
         android:textSize="25sp"
         android:layout_marginTop="60dp"/>
 
@@ -106,7 +107,7 @@
     <android.support.v7.widget.RecyclerView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/grey"
+        android:background="@color/pink"
         android:id="@+id/rv_wordlist"/>
 
 
