--- a/SimpleWord/app/src/main/res/values/colors.xml
+++ b/SimpleWord/app/src/main/res/values/colors.xml
@@ -8,4 +8,7 @@
     <color name="titlegreen">#1BBC9B</color>
     <color name="grey">#9E9E9E</color>
     <color name="white">#FFFFFF</color>
+    <color name="blue">#0000FF</color>
+    <color name="yellow">#FAED7D</color>
+    <color name="pink">#FFE8FF</color>
 </resources>
